@@ -1,0 +1,16 @@
+/*
+ * To change this license header, choose License Headers in Project Properties.
+ * To change this template file, choose Tools | Templates
+ * and open the template in the editor.
+ */
+package trabalho.pratico.pkg2;
+
+/**
+ *
+ * @author alexandre
+ */
+public class Interface 
+{
+    //TODOS OS PROCEDIMENTOS SAO STATIC, PARA NAO SER NECESSARIO INSTANCIACAO
+    //METODOS DE IMPRIMIR A INTERFACE
+}
